# kit-hub

./: .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  mkdocs.yml  nokeys.env  pyproject.toml  render.yaml  ruff.toml
.github/: copilot-instructions.md
.github/agents/: docs-agent.md  test-agent.md
.github/workflows/: docs.yml
docs/: contributing.md  getting-started.md  index.md
docs/guides/: params_config.md  user-guide-webapp.md  webapp_setup.md
prompts/editor/: v1.jinja
prompts/section_finder/: v1.jinja
prompts/tag_extractor/: v1.jinja
prompts/transcriber/: v1.jinja
scratch_space/03.8-webapp-fixes/: 00-fixes.md  01-fixes.md  02-fixes.md  03-fixes.md  04-fix.md
scratch_space/03_package_setup/: 00-plan.md  01-track-progress.md  02-recipe-models.md  03-db-layer.md  04-llm-chains.md  05-ingestion.md  06-voice-notes.md  07-telegram-bot.md  08-webapp-api.md  09-search.md
scratch_space/04_webscraper/: 00_start.md
scratch_space/05_small_fixes/: 00_lint.md  01_local_install.md
scratch_space/feature_sample/: 01_sample.ipynb
scratch_space/kit_hub_sample/: 01_params.ipynb
scratch_space/vibes/: 01-post-rename-cleanup.md  02-ui-fixes.md
src/kit_hub/: __init__.py
src/kit_hub/config/: __init__.py  db_config.py  llm_config.py  sample_config.py
src/kit_hub/data_models/: __init__.py
src/kit_hub/db/: __init__.py  crud_service.py  models.py  session.py
src/kit_hub/ingestion/: __init__.py  cache_manager.py  factory.py  ingest_service.py
src/kit_hub/llm/: __init__.py  editor.py  section_finder.py  tag_extractor.py  transcriber.py
src/kit_hub/params/: db_params.py  kit_hub_params.py  kit_hub_paths.py  llm_params.py  load_env.py  sample_params.py
src/kit_hub/recipes/: __init__.py  recipe_core.py  recipe_enums.py  recipe_note.py  section_idx.py  tag.py
src/kit_hub/voice/: __init__.py  voice_session.py  voice_to_recipe.py  whisper_adapter.py
src/kit_hub/webapp/: __init__.py  app.py  main.py
static/css/: app.css
static/js/: cook.js  htmx-ext-json-enc.min.js  navbar.js  recipe-edit.js  voice.js
templates/: base.html
templates/pages/: cook.html  recipe_detail.html  recipes.html  voice.html
templates/partials/: add_recipe_form.html  cook_table.html  edit_recipe_form.html  ingest_recipe_form.html  navbar.html  recipe_grid.html
tests/: __init__.py  conftest.py
tests/config/: test_env_vars.py  test_llm_config.py  test_sample_config.py
tests/config/webapp/: test_webapp_params.py
tests/data_models/: test_basemodel_kwargs.py
tests/db/: test_crud_service.py  test_db_params.py  test_models.py
tests/ingestion/: test_cache_manager.py  test_ingest_service.py
tests/llm/: __init__.py  test_editor.py  test_section_finder.py  test_tag_extractor.py  test_transcriber.py
tests/metaclasses/: test_singleton.py
tests/params/: test_kit_hub_params.py  test_kit_hub_paths.py  test_llm_params.py  test_sample_params.py
tests/recipes/: __init__.py  test_recipe_core.py  test_recipe_note.py  test_section_idx.py
tests/voice/: __init__.py  test_voice_session.py  test_voice_to_recipe.py
tests/webapp/: conftest.py  test_recipe_api.py  test_recipe_pages.py  test_voice_api.py
(+14 files in other folders)
