[project]
name = "kit-hub"
version = "0.1.0"
description = "Personal recipe management application - ingestion, LLM parsing, voice notes, and sorting"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "dotenv>=0.9.9",
    "llm-core[all] @ git+https://github.com/Pitrified/llm-core@v0.1.0",
    "loguru>=0.7.3",
    "media-downloader[instagram] @ git+https://github.com/Pitrified/media-downloader@v0.1.1",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
webapp = [
    "fastapi-tools @ git+https://github.com/Pitrified/fastapi-tools@v0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kit_hub"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.9.6",
    "pyright[nodejs]>=1.1.407",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-api-autonav>=0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
